Work through chapter 1-4

--- a/1. Einführung.ipynb
+++ b/1. Einführung.ipynb
@@ -35,7 +35,7 @@
     "Variablen\n",
     "----------\n",
     "\n",
-    "Python ist dynamisch typisiert, d.h. Python entscheidet selber welchen Datentype es für eine Variable verwendet. Dafür verwendet es das sogenannte\n",
+    "Python ist dynamisch typisiert, d.h. Python entscheidet selber welchen Datentyp es für eine Variable verwendet. Dafür verwendet es das sogenannte\n",
     "__ _Duck-Typing_ __\n",
     "\n",
     ">„Wenn ich einen Vogel sehe, der wie eine Ente läuft, wie eine Ente schwimmt und wie eine Ente schnattert, dann nenne ich diesen Vogel eine Ente.“\n",
@@ -187,7 +187,7 @@
     }
    },
    "source": [
-    "In andere Sprachen wie zum Beispiel Java oder C++ sind statisch typisiert, d.h. beim Anlegen einer Variablen muss immer der Typ mit angegeben werden.\n",
+    "In anderen Sprachen wie zum Beispiel Java oder C++ sind statisch typisiert, d.h. beim Anlegen einer Variablen muss immer der Typ mit angegeben werden.\n",
     "\n",
     "```c\n",
     "int i=5;\n",
@@ -290,9 +290,9 @@
    "source": [
     "> _ __Beispiel__ _\n",
     ">\n",
-    "> Erstelle einen sehr einfachen Taschenrechner. Der Benutzer soll aufgefordert werden zwei Zahlen ein zu geben und gib die Summe dieser beiden Zahlen zurück.\n",
+    "> Erstelle einen sehr einfachen Taschenrechner. Der Benutzer soll aufgefordert werden zwei Zahlen ein zu geben und das Programm gibt die Summe dieser beiden Zahlen zurück.\n",
     "> \n",
-    "> __Tip__: Um Benutzereingaben abzufragen gibt es die Funktion input(Ausgabetext). Diese gibt den Ausgabetext aus und warte bis der Benutzer seine Eingabe mit Return bestätigt hat. Die Benutzereingabe gibt die Funktion als String zurück."
+    "> __Tip__: Um Benutzereingaben abzufragen gibt es die Funktion input(Ausgabetext). Diese gibt den Ausgabetext aus und warte bis der Benutzer seine Eingabe mit Return bestätigt hat. Die Benutzereingabe wird von der Funktion als String zurückgegeben."
    ]
   },
   {
@@ -433,7 +433,7 @@
     }
    },
    "source": [
-    "So wird das Module wird geladen und Code auf der Moduleebene wird ausgeführt."
+    "So wird das Modul geladen und Code auf der Modulebene wird ausgeführt."
    ]
   },
   {
@@ -455,7 +455,7 @@
     }
    },
    "source": [
-    "Dies wird allerdings nur einmal durchgeführt. Ist das Module bereits importiert, wird der Code auf Module nicht nochmal ausgeführt"
+    "Dies wird allerdings nur einmal durchgeführt. Ist das Modul bereits importiert, wird der Code auf Modulebene nicht nochmal ausgeführt"
    ]
   },
   {
@@ -510,7 +510,7 @@
     }
    },
    "source": [
-    "Diese Schreibweise macht Sinn, wenn man viele Elemente aus einen Module benutzen will, hat aber den Nachteil, dass der Code etwas länger und unlesbarer wird. Deshalb ist es oft besser nur genau die Funktionen oder Variablen zu importieren die man auch benötigt."
+    "Diese Schreibweise macht Sinn, wenn man viele Elemente aus einem Modul benutzen will, hat aber den Nachteil, dass der Code etwas länger und unlesbarer wird. Deshalb ist es oft besser nur genau die Funktionen oder Variablen zu importieren die man auch benötigt."
    ]
   },
   {
@@ -533,11 +533,11 @@
     }
    },
    "source": [
-    "So braucht man den Modulenamen nicht voranstellen und bekommt kurzen lesbaren Code. Außerdem ist es deutlich einfacher welche Elemente man wirklich aus einen anderen Module benötigt und hat so einen besseren Überblick über seine Abhängigkeiten.\n",
+    "So braucht man den Modulnamen nicht voranstellen und bekommt kurzen lesbaren Code. Außerdem ist es deutlich einfacher erkennbar welche Elemente man wirklich aus einen anderen Modul benötigt und hat so einen besseren Überblick über seine Abhängigkeiten.\n",
     "\n",
     "> __Wichtig__\n",
     ">\n",
-    "> Auch bei dieser Art des Imports wird der Code auf Moduleebene ausgeführt.\n",
+    "> Auch bei dieser Art des Imports wird der Code auf Modulebene ausgeführt.\n",
     "\n",
     "\n",
     "\n"
@@ -563,7 +563,7 @@
     }
    },
    "source": [
-    "Schreibweise für das interaktive arbeiten im Terminal und für Ausnahmefälle im Programmcode. Mit dieser Schreibweise lassen sich alle Funktionen und Variablen aus einen Module auf einmal importieren."
+    "Die folgende Schreibweise ist sinnvoll für das interaktive arbeiten im Terminal und für Ausnahmefälle im Programmcode. Mit dieser Schreibweise lassen sich alle Funktionen und Variablen aus einen Modul auf einmal importieren."
    ]
   },
   {
@@ -585,15 +585,6 @@
    "source": [
     "Durch diese Schreibweise verliert man den Überblick was alles in den aktuellen Namensraum imporiert wird und es kann zu ungewollten Verhalten kommen."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -614,7 +605,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
