--- a/2. Komplexe Datentypen.ipynb
+++ b/2. Komplexe Datentypen.ipynb
@@ -1020,7 +1020,7 @@
     "> Kurze Hilfe zum Einlesen von Textdateien.\n",
     "> Mit dem folgenden Code kann man eine Textdatei einlesen und bekommt den Inhalt als eine Liste von Strings. \n",
     "> ```python\n",
-    "> txt_file = open('textbeispiel.txt', 'r')\n",
+    "> txt_file = open('textbeispiel.txt', 'r', encoding='utf-8')\n",
     "> lines = txt_file.readlines()\n",
     "> txt_file.close()\n",
     "> ```\n",
@@ -1035,6 +1035,19 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "> _ __Beispiel__ _\n",
+    ">\n",
+    "> Erstelle einen Taschenrechner, der den Benutzer nach einer einfachen Berechnung mit allen 4 Grundrechenarten frägt, wie zum Beispiel \"1+1\" oder \"5*4\", und diese dann berechnet."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
      "slide_type": "slide"
     }
    },
@@ -1042,7 +1055,7 @@
     "Dictionary\n",
     "-----------\n",
     "\n",
-    "Ein Dictionary ist eine Menge von Schlüssel-Wert-Paaren. Ähnlich wie bei Listen besteht ein Dictionary aus einer Menge von Werten, nur dass man die einzelnen Werte nicht über einen Index sonder über einen frei wählbaren Schlüsseln anspricht."
+    "Ein Dictionary ist eine Menge von Schlüssel-Wert-Paaren. Ähnlich wie bei Listen besteht ein Dictionary aus einer Menge von Werten, nur dass man die einzelnen Werte nicht über einen Index sondern über einen frei wählbaren Schlüsseln anspricht."
    ]
   },
   {
@@ -1101,26 +1114,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "d['a']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "d['d'] = 4"
    ]
   },
   {
@@ -1249,8 +1263,8 @@
    "source": [
     "> _ __Beispiel__ _\n",
     ">\n",
-    "> TODO\n",
-    "> ===="
+    "> - Erstelle ein Dictionary mit Monatsnamen und einer Zahl von 1 bis 12 als Key\n",
+    "> - Ersetze die Monatszahl eines Datumsstrings im Format (DD.MM.JJ) durch den Monatsnamen."
    ]
   }
  ],
