--- a/3. Kontrollstrukturen.ipynb
+++ b/3. Kontrollstrukturen.ipynb
@@ -288,7 +288,24 @@
     "\n",
     "> _ __Beispiel__ _\n",
     ">\n",
-    "> TODO\n"
+    "> - Zähle mit Hilfe eines Dictionarys für jedes Wort wie oft es vorkommt.\n",
+    "> - Wieviel unterschiedliche Worte wurden in dem Text verwendet?\n",
+    "> - Finde das Wort, das man häufigsten verwendet wird.\n",
+    "> - Geben Sie die Worthäufigkeiten in alphabetischer Reihenfolge der Wörter aus. __TIP__: https://docs.python.org/3/howto/sorting.html\n",
+    "> - __Zum Knobbeln__: Gebe die Worthäfigkeit und das dazugehörige Wort in absteigender Reihenfolge aus.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    ">_ __Beispiel__ _\n",
+    ">\n",
+    "> [Fahrtenbuch](http://localhost:8888/notebooks/4.%20Fahrtenbuch.ipynb)"
    ]
   }
  ],
