--- a/4. Fahrtenbuch.ipynb
+++ b/4. Fahrtenbuch.ipynb
@@ -2,7 +2,11 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Fahrtenbuch\n",
     "\n",
@@ -20,7 +24,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "### Installieren von Packten vom PyPi\n",
     "\n",
@@ -47,13 +55,27 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "### Google Maps Module\n",
     "\n",
     "Für die 1. Aufgabe, das Routing, gibt im PyPi u.a. das Modul \"GoogleMaps\". Dieses nutzt das die von Google bereitgestellte Schnittstelle zu den Routingsystem von Google Maps. Der kleine Nachteil dieses Moduls ist, dass man zur Benutzung angemeldt sein muss und einen sogenannten API_KEY braucht. Diesen kann jeder mit einen Google Account unter https://developers.google.com/maps/documentation/directions/get-api-key#client-id anforden. \n",
     "Für unsere Übung habe ich schon einmal einen API_KEY erzeugt. Leider kann man diesen KEY nicht beliebig viel Anfragen in einen gewissen Zeitraum senden, weshalb wir zwischendurch Wartezeiten einbauen müssen.\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "#### Benutzung des Modules\n",
     "\n",
     "1. Anmelden\n",
@@ -74,7 +96,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "### Openpyxl Module\n",
     "\n",
@@ -97,7 +123,18 @@
     "```\n",
     "\n",
     "Gibt eine Referenz auf das Arbeitsblatt mit den angegeben Name zurück.\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "```python\n",
     "    ws['A2'].value\n",
     "```\n",
@@ -118,18 +155,10 @@
     "\n",
     "die Arbeitsmappe wieder speichern.\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
+  "celltoolbar": "Slideshow",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
