--- a/1. Einführung.ipynb
+++ b/1. Einführung.ipynb
@@ -17,12 +17,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Hello World')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -94,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -108,7 +118,7 @@
        "str"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -131,16 +141,16 @@
     {
      "data": {
       "text/plain": [
-       "'spam egg'"
+       "'spam spam'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a + ' egg'"
+    "a + ' spam'"
    ]
   },
   {
@@ -221,11 +231,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Doing nothing\n"
+     ]
+    }
+   ],
    "source": [
     "def first_useless_function():\n",
     "    print('Doing nothing')\n",
@@ -248,11 +266,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "42 spam 3.1415\n"
+     ]
+    }
+   ],
    "source": [
     "def function_with_parameter(spam, egg, ham):\n",
     "    print (spam, egg, ham)\n",
@@ -262,31 +288,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "23"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def function_with_result(spam):\n",
-    "    return spam\n",
-    "\n",
-    "function_with_result('egg')"
+    "    return spam\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2)\n"
+     ]
+    }
+   ],
    "source": [
     "def function_with_results(spam, egg):\n",
     "    return spam, egg\n",
     "\n",
-    "a,b = function_with_results(1 ,2)\n",
-    "print(a,b)"
+    "a = function_with_results(1 ,2)\n",
+    "print(a)"
    ]
   },
   {
@@ -297,11 +340,162 @@
     }
    },
    "source": [
-    "> _ __Beispiel__ _\n",
-    ">\n",
-    "> Erstelle einen sehr einfachen Taschenrechner. Der Benutzer soll aufgefordert werden zwei Zahlen ein zu geben und das Programm gibt die Summe dieser beiden Zahlen zurück.\n",
-    "> \n",
-    "> __Tip__: Um Benutzereingaben abzufragen gibt es die Funktion input(Ausgabetext). Diese gibt den Ausgabetext aus und warte bis der Benutzer seine Eingabe mit Return bestätigt hat. Die Benutzereingabe wird von der Funktion als String zurückgegeben."
+    "_ __Beispiel__ _\n",
+    "\n",
+    "Erstelle einen sehr einfachen Taschenrechner. Der Benutzer soll aufgefordert werden zwei Zahlen ein zu geben und das Programm gibt die Summe dieser beiden Zahlen zurück.\n",
+    " \n",
+    "__Tip__: Um Benutzereingaben abzufragen gibt es die Funktion input(Ausgabetext). Diese gibt den Ausgabetext aus und warte bis der Benutzer seine Eingabe mit Return bestätigt hat. Die Benutzereingabe wird von der Funktion als String zurückgegeben."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "__ _Ausführen einer Pythondatei_ __\n",
+    "\n",
+    "_Windows_\n",
+    "Normalerweise wird die Dateiendung __.py__ mit __python__ verknüpft und so kann eine Pythondatei einfach mit einen Doppelklick ausgeführt werden.\n",
+    "Will man, dass beim Start des Programms keine Kommandozeile geöffnet wird kann man die Datei in __.pyw__ umwandeln.\n",
+    "\n",
+    "In der Kommandozeile führt man die Datei einfach mit __python datei.py__ aus.\n",
+    "\n",
+    "_Linux oder Mac_\n",
+    "Hier wird die Datei einfach im Terminal mit __python datei.py__ ausgeführt.\n",
+    "\n",
+    "\n",
+    "Ruft man eine Pythondatei auf, dann wird alles ausgeführt, dass ich auf der obersten Ebene befindet. Also all das, was nicht eingerückt ist.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "__ _Aufbau einer Pythondatei_ __\n",
+    "\n",
+    "Die ersten Zeilen einer Pythondatei enthalten keine Code sondern beschreiben die Datei.\n",
+    "```Python\n",
+    "#!/usr/bin/env python3\n",
+    "# -*- coding: utf-8 -*-\n",
+    "\"\"\"\n",
+    "Einfacher Addierer\n",
+    "\"\"\"\n",
+    "```\n",
+    "\n",
+    "Dabei ist die erste Zeile `python #!/usr/bin/env python3` nur für unix basierte (Linux und MacOs) wichtig. Diese Zeile gibt an wie die Datei ausgeführt werden soll. In diese Fall soll die Datei mit `python3` ausgeführt werden. Ist diese Zeile vorhanden, dann kann man die Datei auch einfach mit Aufruf __./datei.py__ ausführen.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "```Python\n",
+    "# -*- coding: utf-8 -*-\n",
+    "```\n",
+    "Gibt das sogenannte Encoding der Datei an, d.h. wie werden die Buchstaben im Speicher abgebildet. Dies wird dann wichtig, wenn Umlaute in der Datei vorkommen. Das angegebe Encoding, hier __utf-8__, muss mit dem überstimmen, dass der Texteditor verwendet."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "```Python\n",
+    "\"\"\"\n",
+    "Einfacher Addierer\n",
+    "\"\"\"\n",
+    "```\n",
+    "Ist ein Kommentar der das Programm in der Dateibeschreibt."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "Moderne Pythonkonsolen\n",
+    "-------------------------\n",
+    "\n",
+    "Die im folgende Vorgestellen Pythonkonsolen werden automatisch mit der [Anacondadistribution](https://www.anaconda.com/download/) installiert.\n",
+    "1. [ipython](https://ipython.org/)\n",
+    "2. [jupyter qtconsole](https://github.com/jupyter/qtconsole)\n",
+    "3. [jupyter notebook](http://jupyter.org/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "IPython\n",
+    "--------\n",
+    "[IPython](https://ipython.org/) ist einen Konsolenanwendung sehr ähnlich wie `python.exe` selbst, nur mit deutlich größeren Funktionsumfang.\n",
+    "\n",
+    "- Sessionübergreifende History mit Suche (%hist -g foo)\n",
+    "- Zugriff auf alte Ergebnisse (_1)\n",
+    "- %magic (%ls, %cd)\n",
+    "- Ausführen von Pythondateien (%run)\n",
+    "\n",
+    "Zum starten öffen die _Anacondo Prompt_ im Startmenü und tippe das Kommando `ipython` ein."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "Jupyter qtconsole\n",
+    "--------------------\n",
+    "\n",
+    "IPython aber mit Windowoberfläche.\n",
+    "\n",
+    "\n",
+    "Zum starten öffen die _Anacondo Prompt_ im Startmenü und tippe das Kommando `jupyter qtconsole` ein. Oder starte den _Anacondo Navigator_ und wähle dann den Punkt _qtconsole_.\n",
+    "![](img/qtconsole.png)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "Jupyter notebook\n",
+    "------------------\n",
+    "Jupyter ermöglicht es Programmcode im Browser auszuführen und zu präsentieren\n",
+    "\n",
+    "[FFT-Beispiel](https://nbviewer.jupyter.org/github/unpingco/Python-for-Signal-Processing/blob/master/AUC_Derivation.ipynb)\n",
+    "\n",
+    "Ideal zur Auswertung und Aufbereitung von Daten.\n",
+    "\n",
+    "Zum starten einfach _Jupyter notebook_ im Startmenü starte oder in der _Anaconda Prompt_ `jupyter notebook` aufrufen.\n"
    ]
   },
   {
@@ -350,14 +544,14 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "global_var = 'Achtung'\n",
+    "GLOBAL_VAR = 'Achtung'\n",
     "\n",
     "def ham():\n",
-    "    print(global_var)\n",
+    "    print(GLOBAL_VAR)\n",
     "    \n",
     "ham()\n",
     "\n"
@@ -367,42 +561,57 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "slideshow": {
      "slide_type": "subslide"
     }
    },
    "outputs": [],
    "source": [
-    "global_var = 'Achtung'\n",
+    "GLOBAL_VAR = 'Achtung'\n",
     "\n",
     "def ham():\n",
-    "    global_var='Das geht schief' #hier wird eine lokale Varialbe angelegt\n",
-    "    print(global_var)\n",
+    "    GLOBAL_VAR='Das geht schief' #hier wird eine lokale Varialbe angelegt\n",
+    "    print(GLOBAL_VAR)\n",
     "    \n",
     "ham()\n",
-    "print(global_var)"
+    "print(GLOBAL_VAR)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "slideshow": {
      "slide_type": "subslide"
     }
    },
    "outputs": [],
    "source": [
-    "global_var = 'Achtung'\n",
+    "GLOBAL_VAR = 'Achtung'\n",
     "\n",
     "def ham():\n",
-    "    global global_var\n",
-    "    global_var = 'Das geht'\n",
-    "    print(global_var)\n",
+    "    global GLOBAL_VAR\n",
+    "    GLOBAL_VAR = 'Das geht'\n",
+    "    print(GLOBAL_VAR)\n",
     "    \n",
     "ham()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "__Beispiel__:\n",
+    "\n",
+    "- Erstelle eine globale Variable und weise ihr einen Wert zu\n",
+    "- Erstelle eine Funktion die, die Vabriale auf den Bildschirm ausgibt\n",
+    "- Verändere die Variable in der Funktion und gebe sie in der Funktion und außerhalb der Funktion aus.\n"
    ]
   },
   {
@@ -593,6 +802,43 @@
    "metadata": {},
    "source": [
     "Durch diese Schreibweise verliert man den Überblick was alles in den aktuellen Namensraum imporiert wird und es kann zu ungewollten Verhalten kommen."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "> __TIP:__\n",
+    ">\n",
+    "> Mit den folgende Codebaustein kann man eine Pythondatei als Startdatei und Importmodul verwenden.\n",
+    "> \n",
+    "> ```Python\n",
+    "if __name__ == '__main__':\n",
+    "    #Code hier wird nur ausgeführt wenn es die Startdatei ist.\n",
+    "    #Wurde die Datei importiert wird der Code nicht ausgeführt,\n",
+    "    #da dann der __name__ nicht '__main__'\n",
+    "``` \n",
+    ">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "__Beispie__: \n",
+    "\n",
+    "- Erstelle ein Pythonmodul mit Funktionen für die 4 Grundrechenarten (Beachte den Aufbau einer Pythondatei)\n",
+    "- Gebe das Ergebnis von Berechnungen auf den Bildschirm aus. Für jede Grundrechnenart mindestens eine Berechnung\n",
+    "- Verwende die Funktionen in einem zweiten Modul, ohne dass die Berechnungen aus dem ersten Modul ausgeführt werden\n",
+    "- Verwende die Funktionen in der Pythonkonsole der IDE, ipython, jupyter qtconsole, jupyter notebook\n"
    ]
   }
  ],
