--- a/2. Komplexe Datentypen.ipynb
+++ b/2. Komplexe Datentypen.ipynb
@@ -318,12 +318,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
+   "metadata": {},
    "source": [
+    "__Mob-Hacking__\n",
+    "\n",
+    "Konvertierung der Rohdaten des VC960 Multimeter in den eigentlichen Zahlenwert."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
     "<small>\n",
     "_ __Beispiele__ _\n",
     "\n",
