--- a/1. Einführung.ipynb
+++ b/1. Einführung.ipynb
@@ -887,12 +887,52 @@
     }
    },
    "source": [
+    "__Mob-Hacking__\n",
+    "\n",
+    "Um das gezeigte zu verinnerlichen wollen wir gemeinsam die Temperatur des Voltcraft VC960 auslesen.\n",
+    "\n",
+    "1. Testen der Funktion im Terminal\n",
+    "\n",
+    "2. Erstellen eines wiederverwendbaren Programms\n",
+    "\n",
+    "_Hinweis_\n",
+    "\n",
+    "- Mit der Funktion `urllib.request.urlopen` kann man auf einen Webserver  zugreifen.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "__Beispie__: \n",
     "\n",
     "- Erstelle ein Pythonmodul mit Funktionen für die 4 Grundrechenarten (Beachte den Aufbau einer Pythondatei)\n",
     "- Gebe das Ergebnis von Berechnungen auf den Bildschirm aus. Für jede Grundrechnenart mindestens eine Berechnung\n",
     "- Verwende die Funktionen in einem zweiten Modul, ohne dass die Berechnungen aus dem ersten Modul ausgeführt werden\n",
-    "- Verwende die Funktionen in der Pythonkonsole der IDE, ipython, jupyter qtconsole, jupyter notebook\n"
+    "- Verwende die Funktionen in der Pythonkonsole der IDE, jupyter qtconsole\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "__Hinweise__:\n",
+    "\n",
+    "Alle Dateien zu diesem Kurs: https://github.com/RedBeardCode/vhs_training\n",
+    "\n",
+    "Weitere Pythontutorials:\n",
+    "- https://www.python-kurs.eu/python3_kurs.php\n",
+    "\n",
+    "- https://py-tutorial-de.readthedocs.io/de/python-3.3/index.html"
    ]
   }
  ],
