Fixes for new run

--- a/1. Einführung.ipynb
+++ b/1. Einführung.ipynb
@@ -36,11 +36,27 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "Was ist eigentlich ein Pythonprogramm\n",
+    "--------------------------------------------\n",
+    "\n",
+    "Ein Pythonprogramm besteht aus einer oder mehreren Textdateien. Jede Textdatei wird auch Modul genannt. Diese Textdatei enthält Anweisungen die vom Pythoninterpreter Schritt für Schritt ausgeführt werden.\n",
+    "\n",
+    "Einzelne Kommandos kann man auch direkt im Pythoninterperter, oder Pythonkonsole genannt, ausführen. Für erste Test kann dies sehr hilfreich sein."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
      "slide_type": "slide"
     }
    },
    "source": [
-    "Variablen\n",
+    "# Variablen\n",
     "----------\n",
     "\n",
     "Python ist dynamisch typisiert, d.h. Python entscheidet selber welchen Datentyp es für eine Variable verwendet. Dafür verwendet es das sogenannte\n",
@@ -714,7 +730,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import sub_module"
