--- a/3. Kontrollstrukturen.ipynb
+++ b/3. Kontrollstrukturen.ipynb
@@ -18,18 +18,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Die Zahl ist negativ\n",
-      "Fertig\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a=-1\n",
     "if a < 0:\n",
@@ -50,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -84,18 +75,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Die Zahl ist Null\n",
-      "Fertig\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a=0\n",
     "if a < 0:\n",
@@ -117,7 +99,7 @@
    "source": [
     "> _ __Beispiel__ _\n",
     ">\n",
-    "> Erstelle einen etwas besseren Taschenrechner, der den Benutzer nach einer Berechnung mit zwei Zahlen z.B \"5+8\" oder \"8/4\" (alle 4 Grundrechenarten) frägt und das Ergebnis dieser Berechung zurückgibt."
+    "> Erstelle einen etwas besseren Taschenrechner, der den Benutzer nach einer Berechnung als String mit zwei Zahlenz.B \"5+8\" oder \"8/4\" (alle 4 Grundrechenarten) frägt und das Ergebnis dieser Berechung zurückgibt."
    ]
   },
   {
@@ -138,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +129,7 @@
        "21"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -254,20 +236,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(128, 7)"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "summe = 1\n",
     "num_runs = 0\n",
@@ -327,7 +298,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
