--- a/1. Einführung.ipynb
+++ b/1. Einführung.ipynb
@@ -36,11 +36,27 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "Was ist eigentlich ein Pythonprogramm\n",
+    "--------------------------------------------\n",
+    "\n",
+    "Ein Pythonprogramm besteht aus einer oder mehreren Textdateien. Jede Textdatei wird auch Modul genannt. Diese Textdatei enthält Anweisungen die vom Pythoninterpreter Schritt für Schritt ausgeführt werden.\n",
+    "\n",
+    "Einzelne Kommandos kann man auch direkt im Pythoninterperter, oder Pythonkonsole genannt, ausführen. Für erste Test kann dies sehr hilfreich sein."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
      "slide_type": "slide"
     }
    },
    "source": [
-    "Variablen\n",
+    "# Variablen\n",
     "----------\n",
     "\n",
     "Python ist dynamisch typisiert, d.h. Python entscheidet selber welchen Datentyp es für eine Variable verwendet. Dafür verwendet es das sogenannte\n",
@@ -714,7 +730,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import sub_module"
@@ -887,52 +905,12 @@
     }
    },
    "source": [
-    "__Mob-Hacking__\n",
-    "\n",
-    "Um das gezeigte zu verinnerlichen wollen wir gemeinsam die Temperatur des Voltcraft VC960 auslesen.\n",
-    "\n",
-    "1. Testen der Funktion im Terminal\n",
-    "\n",
-    "2. Erstellen eines wiederverwendbaren Programms\n",
-    "\n",
-    "_Hinweis_\n",
-    "\n",
-    "- Mit der Funktion `urllib.request.urlopen` kann man auf einen Webserver  zugreifen.\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
     "__Beispie__: \n",
     "\n",
     "- Erstelle ein Pythonmodul mit Funktionen für die 4 Grundrechenarten (Beachte den Aufbau einer Pythondatei)\n",
     "- Gebe das Ergebnis von Berechnungen auf den Bildschirm aus. Für jede Grundrechnenart mindestens eine Berechnung\n",
     "- Verwende die Funktionen in einem zweiten Modul, ohne dass die Berechnungen aus dem ersten Modul ausgeführt werden\n",
-    "- Verwende die Funktionen in der Pythonkonsole der IDE, jupyter qtconsole\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "__Hinweise__:\n",
-    "\n",
-    "Alle Dateien zu diesem Kurs: https://github.com/RedBeardCode/vhs_training\n",
-    "\n",
-    "Weitere Pythontutorials:\n",
-    "- https://www.python-kurs.eu/python3_kurs.php\n",
-    "\n",
-    "- https://py-tutorial-de.readthedocs.io/de/python-3.3/index.html"
+    "- Verwende die Funktionen in der Pythonkonsole der IDE, ipython, jupyter qtconsole, jupyter notebook\n"
    ]
   }
  ],
